--- a/src/Sale_Management.Application/Sale_Management.Application.csproj
+++ b/src/Sale_Management.Application/Sale_Management.Application.csproj
@@ -23,4 +23,8 @@
     <PackageReference Include="Volo.Abp.SettingManagement.Application" Version="7.3.3" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Ventes\" />
+  </ItemGroup>
+
 </Project>
