--- a/src/Sale_Management.Application.Contracts/Sale_Management.Application.Contracts.csproj
+++ b/src/Sale_Management.Application.Contracts/Sale_Management.Application.Contracts.csproj
@@ -13,6 +13,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Http.Features" Version="5.0.17" />
     <PackageReference Include="Volo.Abp.ObjectExtending" Version="7.3.3" />
     <PackageReference Include="Volo.Abp.Account.Application.Contracts" Version="7.3.3" />
     <PackageReference Include="Volo.Abp.Identity.Application.Contracts" Version="7.3.3" />
