--- a/src/Sale_Management.HttpApi.Host/Sale_Management.HttpApi.Host.csproj
+++ b/src/Sale_Management.HttpApi.Host/Sale_Management.HttpApi.Host.csproj
@@ -37,4 +37,8 @@
     <None Remove="Logs\**" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Resources\Images\" />
+  </ItemGroup>
+
 </Project>
