Image uploaded successfully

--- a/src/Sale_Management.HttpApi.Host/Sale_Management.HttpApi.Host.csproj
+++ b/src/Sale_Management.HttpApi.Host/Sale_Management.HttpApi.Host.csproj
@@ -39,6 +39,7 @@
 
   <ItemGroup>
     <Folder Include="Resources\Images\" />
+    <Folder Include="wwwroot\images\articles\" />
   </ItemGroup>
 
 </Project>
