--- a/src/Sale_Management.Application/Sale_Management.Application.csproj
+++ b/src/Sale_Management.Application/Sale_Management.Application.csproj
@@ -15,6 +15,8 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Http.Abstractions" Version="2.2.0" />
+    <PackageReference Include="SendGrid" Version="9.28.1" />
     <PackageReference Include="Volo.Abp.Account.Application" Version="7.3.3" />
     <PackageReference Include="Volo.Abp.Identity.Application" Version="7.3.3" />
     <PackageReference Include="Volo.Abp.PermissionManagement.Application" Version="7.3.3" />
