--- a/src/Sale_Management.Domain/Sale_Management.Domain.csproj
+++ b/src/Sale_Management.Domain/Sale_Management.Domain.csproj
@@ -14,6 +14,7 @@
 
   <ItemGroup>
     <PackageReference Include="Abp.EntityFrameworkCore" Version="8.4.0" />
+    <PackageReference Include="Microsoft.AspNetCore.Http.Features" Version="5.0.17" />
     <PackageReference Include="Volo.Abp.Emailing" Version="7.3.3" />
     <PackageReference Include="Volo.Abp.Identity.Domain" Version="7.3.3" />
     <PackageReference Include="Volo.Abp.PermissionManagement.Domain.Identity" Version="7.3.3" />
